# swift-format

./: .deepsource.toml  .flake8  .gitignore  .gitmodules  .licenseignore  .pre-commit-hooks.yaml  .spi.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  Makefile  Package.resolved  Package.swift  README.md  api-breakages.txt  build-script-helper.py  cloudbuild_depl.yaml  cloudbuild_depl_dev.yaml
.github/: CODEOWNERS
.github/workflows/: add-release-asset-macos.yml  add-release-asset-ubuntu.yml  auto_update_version.yml  automerge.yml  build_and_push.yaml  create-release-commits.sh  lint.yml  post_merge.yml  publish_release.yml  pull_request.yml
.swiftci/: 5_10_ubuntu2204  5_7_ubuntu2204  5_8_ubuntu2204  5_9_ubuntu2204  nightly_6_0_macos  nightly_6_0_ubuntu2204  nightly_main_macos  nightly_main_ubuntu2204  nightly_main_windows
Documentation/: Configuration.md  Development.md  IgnoringSource.md  PackagePlugin.md  PrettyPrinter.md  RuleDocumentation.md  Rules.md  configuration_schema.json
Plugins/FormatBuildPlugin/: plugin.swift
Plugins/FormatPlugin/: plugin.swift
Plugins/LintBuildPlugin/: plugin.swift
Plugins/LintPlugin/: plugin.swift
Plugins/generate-pipeline-plugin/: GeneratePipelinePlugin.swift
Scripts/: format-diff.sh  generate-all-pipelines.sh  git-swift-format  package-darwin.sh
Sources/: CMakeLists.txt
Sources/CommonMark/: BlockContent.swift  BlockQuoteNode.swift  CMarkInterop.swift  CodeBlockNode.swift  EmphasisNode.swift  HTMLBlockNode.swift  HeadingNode.swift  ImageNode.swift  InlineCodeNode.swift  InlineContent.swift  InlineHTMLNode.swift  LineBreakNode.swift  LinkNode.swift  ListItemNode.swift  ListNode.swift  MarkdownDocument.swift  MarkdownNode.swift  MarkdownRenderer.swift  MarkdownRewriter.swift  MarkdownVisitor.swift  (+7 more)
Sources/SwiftFormat/: CMakeLists.txt  DebugOptions.swift  LintPipeline.swift  Parsing.swift  Pipelines+Generated.swift  SwiftFormatError.swift  SwiftFormatter.swift  SwiftLinter.swift  SyntaxValidatingVisitor.swift
Sources/SwiftFormat/API/: Configuration+Default.swift  Configuration+Dump.swift  Configuration.swift  DebugOptions.swift  Finding.swift  FindingCategorizing.swift  Indent.swift  Selection.swift  SwiftFormatError.swift  SwiftFormatter.swift  SwiftLinter.swift
Sources/SwiftFormat/Core/: AddModifierRewriter.swift  Attributes+Convenience.swift  Context.swift  DocumentationComment.swift  DocumentationCommentText.swift  Exports.swift  Finding+Convenience.swift  Finding.swift  FindingEmitter.swift  FormatPipeline.swift  FunctionDeclSyntax+Convenience.swift  IgnoreFile.swift  ImportsXCTestVisitor.swift  LegacyTriviaBehavior.swift  LintPipeline.swift  ModifierListSyntax+Convenience.swift  Parsing.swift  Pipelines+Generated.swift  RememberingIterator.swift  Rule.swift  RuleBasedFindingCategory.swift  RuleMask.swift  RuleNameCache+Generated.swift  RuleRegistry+Generated.swift  RuleState.swift  SyntaxFormatRule.swift  SyntaxLintRule.swift  SyntaxProtocol+Convenience.swift  SyntaxTraits.swift  Trivia+Convenience.swift  WithAttributesSyntax+Convenience.swift  WithSemicolonSyntax.swift
Sources/SwiftFormat/PrettyPrint/: Comment.swift  Indent+Length.swift  PrettyPrint.swift  PrettyPrintBuffer.swift  PrettyPrintFindingCategory.swift  Token.swift  TokenStreamCreator.swift  Verbatim.swift  WhitespaceFindingCategory.swift  WhitespaceLinter.swift
Sources/SwiftFormat/Rules/: AllPublicDeclarationsHaveDocumentation.swift  AlwaysUseLiteralForEmptyArrayInit.swift  AlwaysUseLiteralForEmptyCollectionInit.swift  AlwaysUseLowerCamelCase.swift  AmbiguousTrailingClosureOverload.swift  AvoidRetroactiveConformances.swift  BeginDocumentationCommentWithOneLineSummary.swift  DoNotUseSemicolons.swift  DontRepeatTypeInStaticProperties.swift  FileScopedDeclarationPrivacy.swift  FullyIndirectEnum.swift  GroupNumericLiterals.swift  IdentifiersMustBeASCII.swift  NeverForceUnwrap.swift  NeverUseForceTry.swift  NeverUseImplicitlyUnwrappedOptionals.swift  NoAccessLevelOnExtensionDeclaration.swift  NoAssignmentInExpressions.swift  NoBlockComments.swift  NoCasesWithOnlyFallthrough.swift  NoEmptyLineOpeningClosingBraces.swift  NoEmptyTrailingClosureParentheses.swift  NoLabelsInCasePatterns.swift  NoLeadingUnderscores.swift  NoParensAroundConditions.swift  NoPlaygroundLiterals.swift  NoVoidReturnOnFunctionSignature.swift  OmitExplicitReturns.swift  OmitReturns.swift  OneCasePerLine.swift  OneVariableDeclarationPerLine.swift  OnlyOneTrailingClosureArgument.swift  OrderedImports.swift  ReplaceForEachWithForLoop.swift  ReturnVoidInsteadOfEmptyTuple.swift  StandardizeDocumentationComments.swift  SwiftTestingNamingConventions.swift  TypeNamesShouldBeCapitalized.swift  UseEarlyExits.swift  UseExplicitNilCheckInConditions.swift  (+7 more)
Sources/SwiftFormat/Utilities/: ._IgnoreManager.swift  FileIterator.swift  GitIgnorePattern.swift  IgnoreManager.swift  URL+IsRoot.swift  URL+isRoot.swift
Sources/_SwiftFormatInstructionCounter/: CMakeLists.txt
Sources/_SwiftFormatInstructionCounter/include/: module.modulemap
Sources/swift-format/: CMakeLists.txt  CommandLineOptions.swift  FileIterator.swift  FormatError.swift  PrintVersion.swift  Run.swift  SwiftFormatCommand.swift  ToolMode.swift  VersionOptions.swift  main.swift
Sources/swift-format/Frontend/: CacheProcessor.swift  ConfigurationLoader.swift  ConfigurationProvider.swift  DumpConfigurationFrontend.swift  DumpEffectiveConfigurationFrontend.swift  FileToProcess.swift  FormatFrontend.swift  Frontend.swift  FrontendCache.swift  LintFrontend.swift
Sources/swift-format/Subcommands/: ConfigurationOptions.swift  DeleteCache.swift  DumpConfiguration.swift  DumpEffectiveConfiguration.swift  Format.swift  LegacyMain.swift  Lint.swift  LintFormatOptions.swift  PerformanceMeasurement.swift
Sources/swift-format/Utilities/: Diagnostic.swift  DiagnosticPrinting.swift  DiagnosticsEngine.swift  FileHandle+TextOutputStream.swift  FileHandleTextOutputStream.swift  FileIterator.swift  FormatError.swift  Helpers.swift  StderrDiagnosticPrinter.swift  TTY.swift  ThreadSafeBox.swift  UnifiedDiagnosticsEngine.swift
Tests/: LinuxMain.swift
(+466 files in other folders)
